--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
 
 		<script src="vendor/jquery/jquery.js"></script>
 		<script src="vendor/angular/angular.js"></script>
+		<script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
 	</body>
 </html>
