--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html ng-app="app">
 	<head>
 		<title>flashdown</title>
 
@@ -7,31 +7,13 @@
 	</head>
 
 	<body>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							front
-						</div>
-						<div class="panel-body">
-							front of the card
-						</div>
-					</div>
-					<button type="button" class="btn btn-default">Next</button>
-					<button type="button" class="btn btn-default">Back</button>
-					<button type="button" class="btn btn-default">Flip</button>
-					<button type="button" class="btn btn-default">Edit</button>
-				</div>
-				<div class="col-md-6">
-					<textarea class="form-control" rows="10">deck</textarea>
-				</div>
-			</div>
-		</div>
+		<div ui-view></div>
 
 		<script src="vendor/jquery/jquery.js"></script>
 		<script src="vendor/angular/angular.js"></script>
 		<script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
+
+		<script src="app.js"></script>
 	</body>
 </html>
