--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,6 @@
 
 		<script src="js/app.js"></script>
 		<script src="js/controllers/card_controller.js"></script>
-		<script src="js/directives/card_viewer.js"></script>
+		<script src="js/services/deck.js"></script>
 	</body>
 </html>
