--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
 		<script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
 
+		<script src="js/grammar/flashdown.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/controllers/card_controller.js"></script>
 		<script src="js/services/deck.js"></script>
