--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 
 		<script src="js/grammar/flashdown.js"></script>
 		<script src="js/app.js"></script>
+		<script src="js/services/deck_service.js"></script>
 		<script src="js/controllers/card_controller.js"></script>
-		<script src="js/services/deck.js"></script>
 	</body>
 </html>
