--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 
 		<script src="vendor/jquery/jquery.js"></script>
 		<script src="vendor/angular/angular.js"></script>
+		<script src="vendor/angular-sanitize/angular-sanitize.js"></script>
 		<script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
 
