Implemented new parser into flashdown app.

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 		<script src="js/grammar/flashdown.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/services/deck_service.js"></script>
+		<script src="js/services/deck_parser.js"></script>
 		<script src="js/controllers/card_controller.js"></script>
 	</body>
 </html>
