Edit box now uses monospaced font.

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 		<title>flashdown</title>
 
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 
 	<body>
