Implemented some extra controls for viewing the flashcards.

--- a/app/index.html
+++ b/app/index.html
@@ -18,8 +18,12 @@
 
 		<script src="js/grammar/flashdown.js"></script>
 		<script src="js/app.js"></script>
-		<script src="js/services/deck_service.js"></script>
+
+		<script src="js/services/deck_data.js"></script>
 		<script src="js/services/deck_parser.js"></script>
-		<script src="js/controllers/card_controller.js"></script>
+		<script src="js/services/editor_data.js"></script>
+
+		<script src="js/controllers/presenter_ctrl.js"></script>
+		<script src="js/controllers/editor_ctrl.js"></script>
 	</body>
 </html>
