Started working on local file import.

--- a/app/index.html
+++ b/app/index.html
@@ -25,5 +25,6 @@
 
 		<script src="js/controllers/presenter_ctrl.js"></script>
 		<script src="js/controllers/editor_ctrl.js"></script>
+		<script src="js/controllers/import_ctrl.js"></script>
 	</body>
 </html>
