--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,9 @@
 		<script src="js/services/deck_data.js"></script>
 		<script src="js/services/deck_parser.js"></script>
 		<script src="js/services/editor_data.js"></script>
+		<script src="js/services/fileReader.js"></script>
+
+		<script src="js/directives/fileModel.js"></script>
 
 		<script src="js/controllers/presenter_ctrl.js"></script>
 		<script src="js/controllers/editor_ctrl.js"></script>
