Switched to bootstrap theme (flatly).

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>flashdown</title>
 
-		<link rel="stylesheet" href="vendor/bootstrap-css/css/bootstrap.css">
+		<link rel="stylesheet" href="css/flatly.min.css">
+		<link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.css">
 		<link rel="stylesheet" href="vendor/bootstrap-css/css/bootstrap-responsive.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
