--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
 	<body>
 		<div ui-view></div>
 
+		<script src="vendor/ace-builds/src-min/ace.js"></script>
 		<script src="vendor/angular/angular.js"></script>
 		<script src="vendor/angular-sanitize/angular-sanitize.js"></script>
 		<script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
@@ -26,6 +27,7 @@
 		<script src="js/services/fileReader.js"></script>
 
 		<script src="js/directives/fileModel.js"></script>
+		<script src="js/directives/ace.js"></script>
 
 		<script src="js/controllers/presenter_ctrl.js"></script>
 		<script src="js/controllers/editor_ctrl.js"></script>
