--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="app">
 	<head>
-		<title>flashdown</title>
+		<title>Flashdown</title>
 
 		<link rel="stylesheet" href="css/flatly.min.css">
 		<link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.css">
