Preparing for first gh-pages upload.

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,10 @@
 	</head>
 
 	<body>
+		<div class="container" style="text-align: center; margin-top: 10px;">
+			<h1>Flashdown</h1>
+			<p>Made by <a href="http://coalman.github.io">Michael Coleman</a></p>
+		</div>
 		<div ui-view></div>
 
 		<script src="vendor/ace-builds/src-min/ace.js"></script>
